--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,9 +1,2 @@
-<!DOCTYPE html>
-<html>
-<head><title>Home</title></head>
-<body>
-  <h2>Welcome, <%= username %>!</h2>
-  <p>You are logged in.</p>
-  <a href="/logout">Logout</a>
-</body>
-</html>
+<h1>Welcome, <%= user.nickname || user.email %>!</h1>
+<a href="/logout">Logout</a>
