--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -5,3 +5,6 @@
   <button type="submit">Sign Up</button>
 </form>
 <a href="/login">Login</a>
+<% if (error) { %>
+  <p style="color: red;"><%= error %></p>
+<% } %>
