--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,2 +1,6 @@
 <h1>Welcome, <%= user.nickname || user.email %>!</h1>
+<a href="/profile">
+  <img src="<%= user.profilePic %>" alt="Profile" width="40" height="40" style="border-radius: 50%; vertical-align: middle;">
+</a>
+
 <a href="/logout">Logout</a>
